--- a/Custom_TabBar_Template/TabBar/View/TabBarItemView.xib
+++ b/Custom_TabBar_Template/TabBar/View/TabBarItemView.xib
@@ -4,77 +4,78 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="infinite" id="iN0-l3-epB" customClass="TabBarItemView" customModule="Custom_TabBar_Template" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="130" height="50"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+        <view contentMode="scaleAspectFit" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="infinite" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB" customClass="TabBarItemView" customModule="Custom_TabBar_Template" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="130" height="40"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v78-OC-Ygw">
-                    <rect key="frame" x="0.0" y="20" width="130" height="10"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2sQ-G7-RGw" userLabel="Content View">
+                    <rect key="frame" x="0.0" y="0.0" width="130" height="40"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zm7-kX-0mc">
-                            <rect key="frame" x="50" y="-10" width="65" height="30"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" distribution="equalSpacing" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="3C6-gu-uRH">
+                            <rect key="frame" x="0.0" y="0.0" width="130" height="64.5"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ne1-gk-Po8">
+                                    <rect key="frame" x="15" y="46" width="30" height="16.5"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="APU-jw-BAG"/>
+                                        <constraint firstAttribute="width" constant="30" id="QfW-uk-MvB"/>
+                                    </constraints>
+                                    <imageReference key="image" image="gearshape" catalog="system" symbolScale="small"/>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zm7-kX-0mc">
+                                    <rect key="frame" x="50" y="44" width="65" height="20.5"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" name="TabBarColor"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="30" id="3zr-U2-kFu"/>
+                                <constraint firstAttribute="height" constant="40" id="ubt-0U-dpw"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ne1-gk-Po8">
-                            <rect key="frame" x="15" y="-8.5" width="30" height="26.5"/>
-                            <color key="tintColor" systemColor="labelColor"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="30" id="QfW-uk-MvB"/>
-                                <constraint firstAttribute="height" constant="30" id="gr1-hS-Ucx"/>
-                            </constraints>
-                            <imageReference key="image" image="gearshape" catalog="system" symbolScale="small"/>
-                        </imageView>
+                            <edgeInsets key="layoutMargins" top="0.0" left="15" bottom="0.0" right="15"/>
+                        </stackView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemGray6Color"/>
+                    <color key="backgroundColor" name="TabBarColor"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="Zm7-kX-0mc" secondAttribute="trailing" constant="15" id="6gS-PJ-QmS"/>
-                        <constraint firstItem="Zm7-kX-0mc" firstAttribute="leading" secondItem="ne1-gk-Po8" secondAttribute="trailing" constant="5" id="LzY-at-QpF"/>
-                        <constraint firstItem="ne1-gk-Po8" firstAttribute="leading" secondItem="v78-OC-Ygw" secondAttribute="leading" constant="15" id="Rnh-Wn-MZC"/>
-                        <constraint firstItem="Zm7-kX-0mc" firstAttribute="centerY" secondItem="v78-OC-Ygw" secondAttribute="centerY" id="X06-eF-shR"/>
-                        <constraint firstItem="ne1-gk-Po8" firstAttribute="centerY" secondItem="v78-OC-Ygw" secondAttribute="centerY" id="dWV-8w-NSw"/>
+                        <constraint firstAttribute="trailing" secondItem="3C6-gu-uRH" secondAttribute="trailing" id="675-du-hu3"/>
+                        <constraint firstItem="3C6-gu-uRH" firstAttribute="top" secondItem="2sQ-G7-RGw" secondAttribute="top" id="XmB-WE-8iU"/>
+                        <constraint firstItem="3C6-gu-uRH" firstAttribute="leading" secondItem="2sQ-G7-RGw" secondAttribute="leading" id="a6y-LB-Keu"/>
+                        <constraint firstAttribute="bottom" secondItem="3C6-gu-uRH" secondAttribute="bottom" id="vhw-CC-M0a"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="yg6-l5-PYb"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="TabBarColor"/>
             <constraints>
-                <constraint firstItem="v78-OC-Ygw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="6En-xa-o2t"/>
-                <constraint firstAttribute="trailing" secondItem="v78-OC-Ygw" secondAttribute="trailing" id="YP4-b0-GSm"/>
-                <constraint firstAttribute="bottom" secondItem="v78-OC-Ygw" secondAttribute="bottom" constant="20" id="qV9-Ih-6vT"/>
-                <constraint firstItem="v78-OC-Ygw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wo3-ZZ-je8"/>
+                <constraint firstAttribute="trailing" secondItem="2sQ-G7-RGw" secondAttribute="trailing" id="4Me-Io-rPw"/>
+                <constraint firstItem="2sQ-G7-RGw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="rqk-6P-9gf"/>
+                <constraint firstAttribute="bottom" secondItem="2sQ-G7-RGw" secondAttribute="bottom" id="ybG-9O-K3S"/>
+                <constraint firstItem="2sQ-G7-RGw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="zSo-Yd-Dnx"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <edgeInsets key="layoutMargins" top="0.0" left="10" bottom="10" right="0.0"/>
             <connections>
-                <outlet property="backgroundView" destination="v78-OC-Ygw" id="ace-hd-eEc"/>
+                <outlet property="contentView" destination="2sQ-G7-RGw" id="xMQ-Am-Tt0"/>
+                <outlet property="imageHeight" destination="APU-jw-BAG" id="57p-Cd-6Si"/>
+                <outlet property="imageWidth" destination="QfW-uk-MvB" id="akx-qL-YJu"/>
                 <outlet property="imgView" destination="ne1-gk-Po8" id="1IG-Nz-GSA"/>
+                <outlet property="stackView" destination="3C6-gu-uRH" id="XU8-LH-oA6"/>
                 <outlet property="titleLabel" destination="Zm7-kX-0mc" id="ut0-RF-vGy"/>
             </connections>
-            <point key="canvasLocation" x="-494.20289855072468" y="166.74107142857142"/>
+            <point key="canvasLocation" x="-496" y="166"/>
         </view>
     </objects>
     <resources>
         <image name="gearshape" catalog="system" width="128" height="121"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <namedColor name="TabBarColor">
+            <color red="0.14300000667572021" green="0.14300000667572021" blue="0.16599999368190765" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
     </resources>
 </document>
